clang/test/BSC/Negative/Ownership/RuleCheck/multi-level-pointer2/multi-level-pointer2.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

void cons(int * _Owned p) {
    int* a = __move_to_raw(p);
}

int * _Owned * func4(int * _Owned * p) {
    int * _Owned re1 = *p;
    cons(re1);
    return p;
}

int * _Owned * _Owned func6(int * _Owned * _Owned p) {
    int * _Owned re1;
    re1 = *p;
    *p = re1;
    return p;
}

void consumePtr(int * _Owned p) {
    int * p1 = __move_to_raw(p);
    return;
}

void f1(int _Owned * p) { // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    return;
}

int * _Owned f2(int * _Owned p) {
    int * _Owned re1 = p;
    return re1;
}

int * _Owned * f3(int * _Owned * p) {
    int * _Owned re1 = *p;
    consumePtr(re1);
    return p;
}

int * _Owned * _Owned * f7(int * _Owned * _Owned * p) {
    int * _Owned re1;
    re1 = **p;
    cons(re1);
    return p;
}

int main() {
    return 0;
}